--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
@@ -51,7 +51,8 @@
                         <iq-quote-service (selectedService$)="getService($event)"></iq-quote-service>
                         <iq-quote-space (selectedSpaceEmit$)="getSpace($event)"></iq-quote-space>
                         <iq-quote-material (selectedMaterialEmit$)="getMaterial($event)"></iq-quote-material>
-                        <iq-quote-additonal-info></iq-quote-additonal-info>
+                        <iq-quote-additonal-info
+                            (additionalInfoEmit$)="getAdditionalInfo($event)"></iq-quote-additonal-info>
                     </div>
                 </div>
             </div>
