--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-additonal-info/quote-additonal-info.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-additonal-info/quote-additonal-info.component.scss
@@ -116,3 +116,37 @@ textarea {
     box-shadow: 0 0 0 0.25rem var(--purple-30);
   }
 }
+
+.img-container {
+  position: relative;
+  display: inline-block;
+  img {
+    border-radius: 10px;
+    max-inline-size: 100%;
+    block-size: auto;
+    object-fit: cover;
+    object-position: top center;
+    height: 100%;
+  }
+}
+.img-container .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background: rgba(var(--black-100-rgb), 0.5);
+  opacity: 0;
+  transition: opacity 500ms ease-in-out;
+}
+.img-container:hover .overlay {
+  opacity: 1;
+}
+.overlay a.trash {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+}
