--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.html
@@ -31,27 +31,29 @@
         </div>
         <div class="col-12 col-md-4 mb-3">
             <label for="clientQuoteCounty">City / County</label>
-            <select [disabled]="!(selectedCounty$ | async)" class="form-select" (change)="onCountySelect($event)">
+            <select (mousedown)="fetchCountiesData()" id="clientQuoteCounty" class="form-select"
+                (change)="onCountySelect($event)">
                 <option selected disabled>County</option>
-                <option [value]="county.countyCode" *ngFor="let county of counties">
+                <option [value]="county.countyCode" *ngFor="let county of ( counties$ | async | sort:'asc':'name')">
                     {{county.name}}</option>
             </select>
         </div>
         <div class="col-12 col-md-4 mb-3">
             <label for="clientQuoteConstituency">Constituency</label>
-            <select [disabled]="!(selectedConstituency$ | async)" class="form-select"
+            <select [disabled]="!(selected_county$ | async)" class="form-select"
                 (change)="onConstituencyChange($event)">
                 <option selected disabled>Constituency</option>
-                <option [value]="constituency.name" *ngFor="let constituency of constituencies">
+                <option [value]="constituency.name"
+                    *ngFor="let constituency of (selected_county$ | async)?.constituencies | sort:'asc':'name'">
                     {{constituency.name}}
                 </option>
             </select>
         </div>
         <div class="col-12 col-md-4 mb-3">
             <label for="clientQuoteNeighbourhood">Neighborhood</label>
-            <select [disabled]="!(selectedWard$ | async)" class="form-select" (change)="onWardChange($event)">
+            <select [disabled]="!(selected_constituency$ | async)" class="form-select" (change)="onWardChange($event)">
                 <option selected disabled>Neighborhood</option>
-                <option [value]="ward" *ngFor="let ward of wards">
+                <option [value]="ward" *ngFor="let ward of (selected_constituency$ | async)?.wards | sort:'asc'">
                     {{ward}}
                 </option>
             </select>
