--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.html
@@ -3,28 +3,32 @@
     <div class="row">
         <div class="col-12 col-md-4 mb-3">
             <label for="clienQuoteEmail">E-mail address</label>
-            <input type="email" class="form-control" id="clienQuoteEmail" placeholder="example@gmail.com">
+            <input type="email" class="form-control" id="clienQuoteEmail" placeholder="example@gmail.com"
+                [value]="clienQuoteEmail$ | async" (change)="onInputEvent($event,'email')">
             <div class="invalid-feedback">
                 Enter a valid email
             </div>
         </div>
         <div class="col-12 col-md-4 mb-3">
             <label for="clienFirstName">First name</label>
-            <input type="text" class="form-control" id="clienFirstName" placeholder="First name">
+            <input type="text" class="form-control" id="clienFirstName" placeholder="First name"
+                [value]="clientQuoteFirstName$ | async" (change)="onInputEvent($event,'fname')">
             <div class="valid-feedback">
                 error
             </div>
         </div>
         <div class="col-12 col-md-4 mb-3">
             <label for="clienLastName">Last name</label>
-            <input type="text" class="form-control" id="clienLastName" placeholder="Last name">
+            <input type="text" class="form-control" id="clienLastName" placeholder="Last name"
+                [value]="clienQuoteLastName$ | async" (change)="onInputEvent($event, 'lname')">
             <div class="valid-feedback">
                 error
             </div>
         </div>
         <div class="col-12 col-md-4 mb-3">
             <label for="clientPhoneNumber">Phone Number</label>
-            <input type="text" class="form-control" id="clientPhoneNumber" placeholder="+254 06 34 73 99">
+            <input type="text" class="form-control" id="clientPhoneNumber" placeholder="+254 06 34 73 99"
+                [value]="clientQuotePhoneNumber$ | async" (change)="onInputEvent($event,'phone')">
             <div class="invalid-feedback">
                 error
             </div>
@@ -40,7 +44,7 @@
         </div>
         <div class="col-12 col-md-4 mb-3">
             <label for="clientQuoteConstituency">Constituency</label>
-            <select [disabled]="!(selected_county$ | async)" class="form-select"
+            <select [disabled]="(selected_county$ | async)?.name === ''" class="form-select"
                 (change)="onConstituencyChange($event)">
                 <option selected disabled>Constituency</option>
                 <option [value]="constituency.name"
@@ -51,7 +55,8 @@
         </div>
         <div class="col-12 col-md-4 mb-3">
             <label for="clientQuoteNeighbourhood">Neighborhood</label>
-            <select [disabled]="!(selected_constituency$ | async)" class="form-select" (change)="onWardChange($event)">
+            <select [disabled]="(selected_constituency$ | async)?.name === '' " class="form-select"
+                (change)="onWardChange($event)">
                 <option selected disabled>Neighborhood</option>
                 <option [value]="ward" *ngFor="let ward of (selected_constituency$ | async)?.wards | sort:'asc'">
                     {{ward}}
@@ -60,15 +65,17 @@
         </div>
         <div class="col-12 col-md-4 mb-3">
             <label for="clientQuoteAddress">Address</label>
-            <input type="text" class="form-control" id="clientQuoteAddress" placeholder="Apartment, street name">
+            <input type="text" class="form-control" id="clientQuoteAddress" placeholder="Apartment, street name"
+                [value]="clientQuoteAddress$ | async" (change)="onInputEvent($event,'address')">
             <div class="valid-feedback">
                 error!
             </div>
         </div>
         <div class="col-12 col-md-4 mb-3">
-            <label for="clientQuoteHseNumber">House Number</label>
+            <label for="clientQuoteHseNumber">Apartment | Hse No.</label>
             <input type="text" class="form-control" id="clientQuoteHseNumber"
-                placeholder="House Number, suite, unit, Hse. etc.">
+                placeholder="Apartment, House Number, suite, unit, Hse. etc." [value]="clientQuoteHseNumber$ | async"
+                (change)="onInputEvent($event,'hseNumber')">
             <div class="invalid-feedback">
                 error
             </div>
@@ -81,7 +88,9 @@
     <div class="row service-type">
         <div class="col-6 col-lg-3">
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="servicyTypeHome" checked>
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="servicyTypeHome"
+                    [checked]="(clientQuoteServiceType$ | async) === 'home'" value="home"
+                    (change)="onInputEvent($event,'servicyType')">
                 <label class="form-check-label" for="servicyTypeHome">
                     Home Service
                 </label>
@@ -89,7 +98,9 @@
         </div>
         <div class="col-6 col-lg-3">
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="servicyTypeOnline">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="servicyTypeOnline"
+                    [checked]="(clientQuoteServiceType$ | async) === 'online'" value="online"
+                    (change)="onInputEvent($event,'servicyType')">
                 <label class="form-check-label" for="servicyTypeOnline">
                     Online service
                 </label>
