--- a/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/instant-quote.component.html
@@ -2,7 +2,9 @@
     <div class="row" style="row-gap: 24px;" [formGroup]="createInstantQuote">
         <div class="col-12 d-flex align-items-center justify-content-center form-heading" style="gap: 16px;">
             <button class="back-btn border-0" (click)="goBack()" [disabled]="currentStepIndex === 0"
-                [class]="currentStepIndex === 0 ? 'deactivated' : ''"><img src="assets/icons/arrow-right.svg" alt=""> Go
+                [class]="currentStepIndex === 0 ? 'deactivated' : ''"
+                [class.d-none]="currentStepIndex === renderedSteps.length-4"><img src="assets/icons/arrow-right.svg"
+                    alt=""> Go
                 Back</button>
             <div class="active-step" [class.isActiveStep]="currentStep?.status === 'active' || 'completed'">
                 {{steps[currentStepIndex].title}}
@@ -11,8 +13,11 @@
                 {{renderedSteps.length}}
             </div>
             <div class="disabled-step" [class.isNextStep]="instantQuoteForm(steps[currentStepIndex].key)?.invalid">
-                {{steps[currentStepIndex + 1].title}}</div>
+                <span *ngIf="currentStepIndex === renderedSteps.length-1">{{steps[currentStepIndex].title}}</span>
+                <span *ngIf="currentStepIndex < renderedSteps.length-1">{{steps[currentStepIndex + 1].title}}</span>
+            </div>
             <button class="next-btn border-0" (click)=" goToNext()"
+                [class.d-none]="currentStepIndex === renderedSteps.length-1"
                 [disabled]="instantQuoteForm(steps[currentStepIndex].key)?.invalid"
                 [class]="instantQuoteForm(steps[currentStepIndex].key)?.valid ? '' : 'deactivated'">Go
                 Next <img [class.pulse]="steps[0].status === 'active'" src="assets/icons/arrow-right.svg"
@@ -30,7 +35,7 @@
                 <div class="row">
                     <div class="col-8 col-lg-10">
                         <div class="estimate-price">
-                            {{minPrice}}-{{maxPrice}}
+                            {{minPrice | currency:'KES' }}-{{maxPrice | currency:'KES' }}
                         </div>
                         <div class="estimate-price-info">Estimated price range may be inaccurate,<br>
                             Please complete the process to receive a final quote</div>
@@ -39,9 +44,9 @@
                         <div class="hours-container">
                             <span class="hours-header"> {{ 'HOURS_ESTIMATES.HOURS' | translate }} </span>
                             <div class="hours-grp" *ngIf="spaceSelected">
-                                <span class="hours-btn">{{spaceSelected.minHours}}</span>
-                                <span class="houts-to">to</span>
-                                <span class="hours-btn">{{spaceSelected.maxHours}}</span>
+                                <div class="estimate-price-info fs-6">
+                                    {{spaceSelected.minHours}}-{{spaceSelected.maxHours}}
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -63,20 +68,7 @@
             </div>
         </ng-template>
         <ng-template #iqQuoteSummary>
-            <div class="col-12 col-lg-9 mx-auto">
-                <div class="row">
-                    <div class="payment-options-header">Payment options</div>
-                    <div class="payment-options-text">We support Visa, MasterCard, PayPal, M-Pesa Transfer and many
-                        other
-                        payment methods</div>
-                    <div class="payment-options ps-3 flex-wrap">
-                        <img src="assets/icons/money/visa.svg" alt="visa logo" class="img-fluid" width="80">
-                        <img src="assets/icons/money/paypal.svg" alt="paypal-logo" class="img-fluid" width="80">
-                        <img src="assets/icons/money/mastercard.svg" alt="mastercard-logo" class="img-fluid" width="80">
-                        <img src="assets/icons/money/mpesa.svg" alt="mpesa logo" class="img-fluid" width="80">
-                    </div>
-                </div>
-            </div>
+            <iq-quote-summary></iq-quote-summary>
         </ng-template>
     </div>
 </main>
