--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-summary-options/quote-summary.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-summary-options/quote-summary.component.html
@@ -91,7 +91,7 @@
 
         <div class="container d-flex gap-2">
             <div class="support-text">Attached Files: 4 Images</div>
-            <a (click)="downloadImages()" class="greyed-text">Click Here to Download</a>
+            <a (click)="downloadImages()" class="greyed-text" style="cursor: pointer;">Click Here to Download</a>
         </div>
 
         <div class="container">
@@ -122,7 +122,7 @@
                         Agreement</a>
                 </label>
             </div>
-            <button class="btn primary-btn w-50">Validate Quote</button>
+            <button class="btn primary-btn w-50" (click)="onValidateQuote()">Validate Quote</button>
         </div>
     </div>
 </div>
