--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-material/quote-material.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-material/quote-material.component.html
@@ -1,8 +1,9 @@
 <div class="accordion-item ">
     <h2 class="accordion-header" id="headingMaterial">
         <button [disabled]="(space_selected$ | async)?.id === ''" (click)="loadMaterials()"
-            [class.isCompleted]="materialSelected" class="accordion-button" type="button" data-bs-toggle="collapse"
-            data-bs-target="#collapseMaterial" aria-expanded="true" aria-controls="collapseMaterial">
+            [class.isCompleted]="materialSelected?.name !== ''" class="accordion-button" type="button"
+            data-bs-toggle="collapse" data-bs-target="#collapseMaterial" aria-expanded="true"
+            aria-controls="collapseMaterial">
             <div class="row steps w-100">
                 <div class="col-2 step-text-number">Step 3:</div>
                 <div class="col-10 step-text">Select Material (optional)</div>
