--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-summary-options/quote-summary.component.scss
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-summary-options/quote-summary.component.scss
@@ -91,3 +91,23 @@ td {
 .greyed-text {
   color: rgba(14, 28, 54, 0.75);
 }
+.response-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  text-align: center;
+  color: rgba(var(--black-100-rgb), 0.75);
+}
+.response-heading {
+  /*  */
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  /* identical to box height */
+  text-align: center;
+  margin-bottom: 24px;
+
+  /* Black/100 */
+  color: #0e1c36;
+}
